--- a/index.html
+++ b/index.html
@@ -1,32 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Your Website Title</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gorilla Tag Minigames</title>
+  <style>
+    /* Embedded CSS */
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(180deg, #f5f5f5, #e0e0e0);
+      color: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .container {
+      text-align: center;
+      background: #ffffff;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      max-width: 400px;
+      width: 100%;
+    }
+
+    .header .logo {
+      width: 100px;
+      height: auto;
+      margin-bottom: 20px;
+      border-radius: 50%;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 10px;
+      color: #444;
+    }
+
+    p {
+      font-size: 1rem;
+      color: #666;
+    }
+
+    .join-button {
+      display: inline-block;
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #ffffff;
+      background: #4285F4;
+      border: none;
+      border-radius: 25px;
+      text-decoration: none;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      transition: background 0.3s ease;
+    }
+
+    .join-button:hover {
+      background: #3367D6;
+    }
+
+    footer {
+      margin-top: 20px;
+      font-size: 0.8rem;
+      color: #999;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+  <div class="container">
+    <header class="header">
+      <img src="https://github.com/m5n5/game/blob/main/logo.png" alt="GorillaFlix Logo" class="logo">
+      <h1>Welcome to Gorilla Tag Minigames</h1>
+      <p>Join our amazing community and experience thrilling Gorilla Tag minigames!</p>
     </header>
 
     <main>
-        <section>
-            <h1>Welcome to Your Website</h1>
-            <p>This is a simple index page to get you started. Add your content here.</p>
-        </section>
+      <a href="https://discord.gg/sMVpP4Xr3A" class="join-button">Join Our Discord</a>
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Website Name. All Rights Reserved.</p>
+      <p>&copy; 2025 GorillaFlix. All rights reserved.</p>
     </footer>
+  </div>
 </body>
 </html>
